Implemented the new On-boarding

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -201,3 +201,9 @@
 
 /* Toast message shown when youtube video is Successfully downloaded */
 "The download is complete. Open the Photos app to watch the video." = "Der Download is abgeschlossen. Öffne die Fotos App um das Video anzuschauen.";
+
+/* Brading label for onBorading */
+"Faster and safer" = "Schneller und sicherer";
+
+/* subtitle label for onBorading */
+"SEARCH ENGINE \n IN THE BROWSER" = "DIE SUCHMASCHINE \n IM BROWSER";
