--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -202,3 +202,8 @@
 
 /* Toast message shown when youtube video is Successfully downloaded */
 "The download is complete. Open the Photos app to watch the video." = "The download is complete. Open the Photos app to watch the video.";
+/* Brading label for onBorading */
+"Faster and safer" = "Faster and safer";
+
+/* subtitle label for onBorading */
+"SEARCH ENGINE \n IN THE BROWSER" = "SEARCH ENGINE \n IN THE BROWSER";
