Changed the location service description message

--- a/Client/LocalizedStrings/de.lproj/InfoPlist.strings
+++ b/Client/LocalizedStrings/de.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-"NSLocationWhenInUseUsageDescription" = "Von Ihnen besuchte Websites können Ihren Standort abfragen.";
+"NSLocationWhenInUseUsageDescription" = "Du erhältst bessere Ergebnisse, wenn du CLIQZ Zugriff auf deinen Standort erlaubst.";
 
 "ShortcutItemTitleNewPrivateTab" = "Neuer privater Tab";
 
