--- a/Client/LocalizedStrings/en.lproj/InfoPlist.strings
+++ b/Client/LocalizedStrings/en.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-"NSLocationWhenInUseUsageDescription" = "Websites you visit may request your location.";
+"NSLocationWhenInUseUsageDescription" = "You receive better results when you allow CLIQZ accessing your location.";
 
 "ShortcutItemTitleNewPrivateTab" = "New Private Tab";
 
