--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -219,3 +219,6 @@
 
 /* Cliqz search hint description */
 "Fast-search description" = "Alles sofort im Blick: Die relevantesten Suchergebnisse werden dir auf den intelligenten CLIQZ Ergebniskarten direkt angezeigt";
+
+/* Detailed description on Adblocking settings */
+"AdBlocking settings clarification" = "Bitte beachte: Cliqz Browser muss größere Informationspakete laden bevor der Werbeblocker effizient funktioniert. Dazu muss die App mit einem WLAN verbunden sein.";
