[IB-663] Added settings option for tips and tricks

--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -223,3 +223,6 @@
 
 /* Detailed description on Adblocking settings */
 "AdBlocking settings clarification" = "Please note: Cliqz Browser has to download some data packages first, before the ad-blocker works efficiently. For this, the app must be connected to Wi-Fi.";
+
+/* [Settings] Show tips and tricks page */
+"Get the best out of CLIQZ" = "Get the best out of CLIQZ";
