displayed HUD while youtube downloader is grabbing he download links for the URLs and change the position of the video quality action sheet to the middle of the screen

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -225,3 +225,12 @@
 
 /* [Settings] Show tips and tricks page */
 "Get the best out of CLIQZ" = "Get the best out of CLIQZ";
+
+/* Youtube downloader action sheet title */
+"Video quality" = "Videoqualität";
+
+/* Youtube downloader action sheet message */
+"Please select video quality" = "Bitte wähle die gewünschte Videoqualität aus";
+
+/* HUD message displayed while youtube downloader grabing the download URLs of the video */
+"Retrieving video information" = "Lade Videoinformationen";
