--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -226,3 +226,12 @@
 
 /* [Settings] Show tips and tricks page */
 "Get the best out of CLIQZ" = "Get the best out of CLIQZ";
+
+/* Youtube downloader action sheet title */
+"Video quality" = "Video quality";
+
+/* Youtube downloader action sheet message */
+"Please select video quality" = "Please select video quality";
+
+/* HUD message displayed while youtube downloader grabing the download URLs of the video */
+"Retrieving video information" = "Retrieving video information";
