Added missing translation

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -224,7 +224,7 @@
 "AdBlocking settings clarification" = "Bitte beachte: Cliqz Browser muss größere Informationspakete laden bevor der Werbeblocker effizient funktioniert. Dazu muss die App mit einem WLAN verbunden sein.";
 
 /* [Settings] Show tips and tricks page */
-"Get the best out of CLIQZ" = "Get the best out of CLIQZ";
+"Get the best out of CLIQZ" = "Hol dir das Beste aus CLIQZ";
 
 /* Youtube downloader action sheet title */
 "Video quality" = "Videoqualität";
