[IB-718]:     widget layout is weird

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -121,7 +121,7 @@
 /* Setting menu title */
 "Settings" = "Einstellungen";
 
-/* New tab title */
+/* "Widget item for a new tab" */
 "New Tab" = "Neuer Tab";
 
 /* New private tab title */
