--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -122,7 +122,7 @@
 /* Setting menu title */
 "Settings" = "Settings";
 
-/* New tab title */
+/* "Widget item for a new tab" */
 "New Tab" = "New Tab";
 
 /* New private tab title */
