--- a/Client/LocalizedStrings/fr.lproj/FindInPage.strings
+++ b/Client/LocalizedStrings/fr.lproj/FindInPage.strings
@@ -1,12 +1,11 @@
 /* Done button in Find in Page Toolbar. */
-"Done" = "Done";
+"Done" = "Fait";
 
 /* Text selection menu item */
-"Find in Page" = "Find in Page";
+"Find in Page" = "Trouver sur cette page";
 
 /* Accessibility label for next result button in Find in Page Toolbar. */
-"Next in-page result" = "Next in-page result";
+"Next in-page result" = "Résultat suivant sur cette page"; 
 
 /* Accessibility label for previous result button in Find in Page Toolbar. */
-"Previous in-page result" = "Previous in-page result";
-
+"Previous in-page result" = "Résultat précédent sur cette page";
