--- a/Client/LocalizedStrings/fr.lproj/Storage.strings
+++ b/Client/LocalizedStrings/fr.lproj/Storage.strings
@@ -2,7 +2,7 @@
 "Bookmarks Menu" = "Menu des favoris";
 
 /* The name of the folder that contains desktop bookmarks in the toolbar. This should match bookmarks.folder.toolbar.label on Android. */
-"Bookmarks Toolbar" = "Bar des favoris";
+"Bookmarks Toolbar" = "Barre des favoris";
 
 /* The title of the folder that contains mobile bookmarks. This should match bookmarks.folder.mobile.label on Android. */
 "Mobile Bookmarks" = "Favoris mobile";
