--- a/Client/LocalizedStrings/fr.lproj/Search.strings
+++ b/Client/LocalizedStrings/fr.lproj/Search.strings
@@ -1,5 +1,5 @@
 /* Label for search engine buttons. The argument corresponds to the name of the search engine. */
-"%@ search" = "%@ recherche";
+"%@ search" = "moteur de recherche %@";
 
 /* For search suggestions prompt. This string should be short so it fits nicely on the prompt row. */
 "No" = "Non";
@@ -8,10 +8,10 @@
 "Search Settings" = "Paramètres de recherche";
 
 /* Accessibility label for image of default search engine displayed left to the actual search suggestions from the engine. The parameter substituted for \"%@\" is the name of the search engine. E.g.: Search suggestions from Google */
-"Search suggestions from %@" = "Suggestions de recherche depuis %@";
+"Search suggestions from %@" = "Suggestions de recherche de %@";
 
 /* Prompt shown before enabling provider search queries */
-"Turn on search suggestions?" = "Activer les suggestions de recherche?";
+"Turn on search suggestions?" = "Activer les suggestions de recherche ?";
 
 /* For search suggestions prompt. This string should be short so it fits nicely on the prompt row. */
 "Yes" = "Oui";
