Added close all tabs option to the long press of tabs button

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -234,3 +234,6 @@
 
 /* HUD message displayed while youtube downloader grabing the download URLs of the video */
 "Retrieving video information" = "Lade Videoinformationen";
+
+/* Action sheet item for closing all opened tabs */
+"Close All Tabs" = "Alle Tabs schliessen";
