add Remi comments

--- a/Client/LocalizedStrings/fr.lproj/OnePasswordExtension.strings
+++ b/Client/LocalizedStrings/fr.lproj/OnePasswordExtension.strings
@@ -2,7 +2,7 @@
 "1Password Extension was cancelled by the user" = "l'extension 1Password a été annulée par l'utilisateur";
 
 /* 1Password Extension Error Message */
-"App Extension API is not available in this version of iOS" = "l'API pour les extensions n'est plus disponible dans cette version iOS";
+"App Extension API is not available in this version of iOS" = "l'API pour les extensions n'est plus disponible dans cette version d'iOS";
 
 /* 1Password Extension Error Message */
 "Failed to contact the 1Password Extension" = "Echec de connextion avec l'extension 1Password";
@@ -17,8 +17,8 @@
 "Failed to fill web page because script is missing" = "Echec lors du chargement de la page Web car le script est inexistant";
 
 /* 1Password Extension Error Message */
-"Failed to obtain URL String from web view. The web view must be loaded completely when calling the 1Password Extension" = "Echec de l'obtention de l'URL à partir de la vue Web. La vue Web doit avoir été chargée complètement lors de l'appel de l'extension 1Password";
+"Failed to obtain URL String from web view. The web view must be loaded completely when calling the 1Password Extension" = "Echec de l'obtention de l'URL à partir de la vue Web. La vue Web doit avoir été chargée complètement lors de l'appel à l'extension 1Password";
 
 /* 1Password Extension Error Message */
-"Failed to parse information returned by 1Password Extension" = "Echec de l'analyse de l'information retournée par l'extension 1Password";
+"Failed to parse information returned by 1Password Extension" = "Échec de l'analyse de l'information retournée par l'extension 1Password";
 
