--- a/Extensions/Today/fr.lproj/Cliqz.strings
+++ b/Extensions/Today/fr.lproj/Cliqz.strings
@@ -7,7 +7,7 @@
 */
 
 /* New private tab title */
-"New Private Tab" = "Nouvel onglet en mode «Oubli» ";
+"New Private Tab" = "Nouvel onglet en mode Oubli";
 
 /* "Widget item for a new tab" */
 "New Tab" = "Nouvel onglet";
