Improved some part of UI

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -241,3 +241,6 @@
 
 /* Action sheet item for closing all opened tabs */
 "Close All Tabs" = "Alle Tabs schliessen";
+
+/* Title to expand news stream */
+"MoreNews" = "Mehr Nachrichten";
