--- a/Client/LocalizedStrings/fr.lproj/FindInPage.strings
+++ b/Client/LocalizedStrings/fr.lproj/FindInPage.strings
@@ -1,5 +1,5 @@
 /* Done button in Find in Page Toolbar. */
-"Done" = "Fini";
+"Done" = "Terminé";
 
 /* Text selection menu item */
 "Find in Page" = "Trouver sur cette page";
