--- a/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
@@ -42,7 +42,7 @@
 "The Internet connection appears to be offline." = "La connexion internet semble interrompue.";
 
 /* Title for `Top news` home shortcut. */
-"Top news" = "Le meilleur de l'actualité";
+"Top news" = "Top news";
 
 /* Title for `Last site` home shortcut. */
 "Last site" =  "Récemment visités";
