--- a/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
@@ -27,7 +27,7 @@
 "FAQs & Support" = "FAQs & Support";
 
 /* Open search section of settings */
-"Search" = "Moteurs de recherche";
+"Search" = "Rechercher";
 
 /* Footnote message for feedback */
 "Feedback to Cliqz Browser (Version %@) for iOS (Version %@) from %@" = "Feedback pour le navigateur Cliqz (Version %@) pour iOS (Version %@) de %@";
@@ -87,7 +87,7 @@
 "Show blocked topsites" = "Restaurer les sites les plus visités";
 
 /* Text of the 'Show blocked top-sites' alert */
-"All blocked topsites will be shown on the start page again." = "La page d'accueil montre les sites les plus visités.";
+"All blocked topsites will be shown on the start page again." = "Les sites les plus visités seront affichés sur la page d'accueil montre .";
 
 /* OK button in the 'Show blocked top-sites' alert */
 /* Button label to `OK` in news notification permission screen */
