--- a/Client/LocalizedStrings/fr.lproj/ClearPrivateData.strings
+++ b/Client/LocalizedStrings/fr.lproj/ClearPrivateData.strings
@@ -24,7 +24,7 @@
 "Cookies" = "Cookies";
 
 /* Settings item for clearing website data */
-"Offline Website Data" = "Données hors connexion du site Web ";
+"Offline Website Data" = "Données hors connexion";
 
 /* Settings item for clearing passwords and login data */
 "Saved Logins" = "Sauvegarder les paramètres de connexion";
