Implemented forget mode for Freshtab

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -244,3 +244,9 @@
 
 /* Title to expand news stream */
 "MoreNews" = "Mehr Nachrichten";
+
+/* Title on Freshtab for forget mode */
+"Forget Tab" = "Vergessen Tab";
+
+/* Description on Freshtab for forget mode */
+"Forget Tab Description" = "Websites werden nicht in deinem Verlauf gespeichert. Ebenso werden temporäre Dateien und Cookies nicht gespeichert. Downloads und Lesezeichen werden aber gespeichert.\n Dein Internetdienstanbieter oder Arbeitgeber können weiterhin nachvollziehen, welche Seiten du besucht hast.";
