--- a/Client/LocalizedStrings/fr.lproj/ClearHistoryConfirm.strings
+++ b/Client/LocalizedStrings/fr.lproj/ClearHistoryConfirm.strings
@@ -5,13 +5,13 @@
 "Clear" = "Effacer";
 
 /* Description of the confirmation dialog shown when a user tries to clear history that's synced to another device. */
-"History will be removed from all your connected devices. This cannot be undone." = "L'historique est sur le point d'être supprimé sur tout vos appareils connectés. Cette action est irréversible.";
+"History will be removed from all your connected devices. This cannot be undone." = "L'historique est sur le point d'être supprimé sur tout tes appareils connectés. Cette action est irréversible.";
 
 /* The confirmation button that clears history even when Sync is connected. */
 "OK" = "OK";
 
 /* Title of the confirmation dialog shown when a user tries to clear history that's synced to another device. */
-"Remove history from your Firefox Account?" = "Supprimer l'historique de votre compte Firefox?";
+"Remove history from your Firefox Account?" = "Supprimer l'historique de ton compte Firefox?";
 
 /* Description of the confirmation dialog shown when a user tries to clear history that's synced to another device. */
-"This action will clear all of your private data, including history from your synced devices." = "Cette action effacera toutes vos données personnelles, y compris l'historique de vos appareils synchronisés.";
+"This action will clear all of your private data, including history from your synced devices." = "Cette action effacera toutes tes données personnelles, y compris l'historique de tes appareils synchronisés.";
